--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -12,7 +12,7 @@ rustflags = [
   "-Aclippy::question_mark_used",               # convenience
   "-Aclippy::single_call_fn",                   # function only called once
   "-Aclippy::single_char_lifetime_names",       # common practice to use 'a, to remove ?
-  "-Aclippy::pub-with-shorthand",               # export of `yeet!` macro is problematic with this lint
+  "-Aclippy::pub-with-shorthand",               # pub(<scope>) instead of pub(in <scope>)
   ## Must remove ##
   "-Aclippy::missing_docs_in_private_items",
   "-Aclippy::missing-errors-doc",
