--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+miette = { version = "5.10.0", features = ["fancy-no-backtrace"] }
 thiserror = "1.0.48"
 
 [[bin]]
