--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -10,6 +10,7 @@ rustflags = [
   "-Aclippy::blanket_clippy_restriction_lints", # allow `clippy::restriction` to be used globally
   "-Aclippy::implicit_return",                  # convenience
   "-Aclippy::question_mark_used",               # convenience
+  "-Aclippy::separated_literal_suffix",         # allows 2.0_f32
   "-Aclippy::single_call_fn",                   # function only called once
   "-Aclippy::single_char_lifetime_names",       # common practice to use 'a, to remove ?
   "-Aclippy::pub-with-shorthand",               # pub(<scope>) instead of pub(in <scope>)
