--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,7 +6,7 @@ rustflags = [
   "-Wclippy::nursery",
   # "-Wclippy::cargo",
   ## Allowed ##
-  "-Aclippy::arithmetic-side-effects",          # position advancement in `Iterator::next`
+  "-Aclippy::arithmetic-side-effects",          # cursor increment in parsing/lexing and evaluation
   "-Aclippy::blanket_clippy_restriction_lints", # allow `clippy::restriction` to be used globally
   "-Aclippy::implicit_return",                  # convenience
   "-Aclippy::question_mark_used",               # convenience
