--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,5 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Rust nightly
         uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
       - name: Run tests
         run: cargo test --workspace
