--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,9 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install Rust nightly
+      - name: Install Rust
         uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
       - name: Run tests
         run: cargo test --workspace
