--- a/.github/workflows/fmt&lint.yml
+++ b/.github/workflows/fmt&lint.yml
@@ -21,6 +21,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: IronCoreLabs/rust-toolchain@v1
       - name: Rust clippy
         run: cargo clippy --all --all-targets
