--- a/.github/workflows/fmt&lint.yml
+++ b/.github/workflows/fmt&lint.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: IronCoreLabs/rust-toolchain@v1
       - name: Rust fmt
         run: cargo fmt --all -- --check
 
