--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install Rust
-        uses: IronCoreLabs/rust-toolchain
+        uses: IronCoreLabs/rust-toolchain@v1
       - name: Run tests
         run: cargo test --workspace
