--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ thiserror = "1.0.48"
 [[bin]]
 name = "repl"
 path = "src/bin/repl.rs"
+
+[features]
+default = ["pemdas"]
+pemdas = []
+pejmdas = []
