--- a/.github/workflows/fmt&lint.yml
+++ b/.github/workflows/fmt&lint.yml
@@ -22,5 +22,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Rust
         uses: IronCoreLabs/rust-toolchain@v1
-      - name: Rust clippy
-        run: cargo clippy --all --all-targets
+      - name: Rust clippy (default features, currently `pemdas`)
+        run: cargo clippy
+      - name: Rust clippy (`pejmdas` feature)
+        run: cargo clippy --no-default-features --features pejmdas
