--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,5 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Rust
         uses: IronCoreLabs/rust-toolchain@v1
-      - name: Run tests
-        run: cargo test --workspace
+      - name: Run tests (default features, currently `pemdas`)
+        run: cargo test
+      - name: Run tests (`pejmdas` feature)
+        run: cargo test --no-default-features --features pejmdas
