--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -12,6 +12,8 @@ rustflags = [
   ## Allowed ##
   "-Aclippy::arithmetic-side-effects",          # cursor increment in parsing/lexing and evaluation
   "-Aclippy::blanket_clippy_restriction_lints", # allows `clippy::restriction` to be used globally
+  "-Aclippy::float-arithmetic",                 # float arithmetic during evaluation
+  "-Aclippy::modulo-arithmetic",                # modulo arithmetic during evaluation
   "-Aclippy::question_mark_used",               # convenience
   "-Aclippy::single_call_fn",                   # function only called once
   "-Aclippy::single_char_lifetime_names",       # common practice to use 'a, to remove ?
