POC comptime optimizations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "repl"
 path = "src/bin/repl.rs"
 
 [features]
-default = ["pemdas"]
+default = ["pemdas", "compile-time-optimizations"]
 pemdas = []
 pejmdas = []
+compile-time-optimizations = []
