--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,13 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Rust
         uses: IronCoreLabs/rust-toolchain@v1
-      - name: Run tests (default features, currently `pemdas`)
-        run: cargo test
+      ### Pemdas
+      - name: Run tests (`pemdas` & `compile-time-optimizations`)
+        run: cargo test --no-default-features --features pemdas --features compile-time-optimizations
+      - name: Run tests (`pemdas` feature)
+        run: cargo test --no-default-features --features pemdas
+      ### Pejmdas
+      - name: Run tests (`pejmdas` & `compile-time-optimizations` feature)
+        run: cargo test --no-default-features --features pejmdas --features compile-time-optimizations
       - name: Run tests (`pejmdas` feature)
         run: cargo test --no-default-features --features pejmdas
