--- a/.github/workflows/fmt&lint.yml
+++ b/.github/workflows/fmt&lint.yml
@@ -22,7 +22,13 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Rust
         uses: IronCoreLabs/rust-toolchain@v1
-      - name: Rust clippy (default features, currently `pemdas`)
-        run: cargo clippy
-      - name: Rust clippy (`pejmdas` feature)
+      ### Pemdas
+      - name: Run clippy (`pemdas` & `compile-time-optimizations`)
+        run: cargo clippy --no-default-features --features pemdas --features compile-time-optimizations
+      - name: Run clippy (`pemdas` feature)
+        run: cargo clippy --no-default-features --features pemdas
+      ### Pejmdas
+      - name: Run clippy (`pejmdas` & `compile-time-optimizations` feature)
+        run: cargo clippy --no-default-features --features pejmdas --features compile-time-optimizations
+      - name: Run clippy (`pejmdas` feature)
         run: cargo clippy --no-default-features --features pejmdas
