--- a/.github/workflows/fmt&lint.yml
+++ b/.github/workflows/fmt&lint.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Rust
         uses: IronCoreLabs/rust-toolchain@v1
+        with:
+          toolchain: nightly
       - name: Rust fmt
         run: cargo fmt --all -- --check
 
@@ -22,6 +24,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Rust
         uses: IronCoreLabs/rust-toolchain@v1
+        with:
+          toolchain: nightly
       ### Pemdas
       - name: Run clippy (`pemdas` & `compile-time-optimizations`)
         run: cargo clippy --no-default-features --features pemdas --features compile-time-optimizations
