--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Rust
         uses: IronCoreLabs/rust-toolchain@v1
+        with:
+          toolchain: nightly
       ### Pemdas
       - name: Run tests (`pemdas` & `compile-time-optimizations`)
         run: cargo test --no-default-features --features pemdas --features compile-time-optimizations
