--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -18,9 +18,9 @@ rustflags = [
   "-Aclippy::question_mark_used",               # convenience
   "-Aclippy::single_call_fn",                   # function only called once
   "-Aclippy::single_char_lifetime_names",       # common practice to use 'a, to remove ?
+  "-Aclippy::undocumented-unsafe-blocks",       # ok to not document if using `trust_me!` macro
   ## Must remove ##
   "-Aclippy::missing_docs_in_private_items",
   "-Aclippy::mod_module_files",
-  "-Aclippy::undocumented-unsafe-blocks",
   "-Aclippy::ref_patterns",                     # dunno if it can be removed
 ]
