--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,21 @@
 name = "xprs"
 version = "0.1.0"
 edition = "2021"
+authors = ["Victor LEFEBVRE <contact@vic1707.xyz>"]
+description = "**Xprs** is a flexible and extensible mathematical expression parser and evaluator for Rust, designed for simplicity and ease of use."
+documentation = "https://docs.rs/xprs"
+homepage = "https://github.com/vic1707/xprs"
+license = "WTFPL"
+readme = "README.md"
+repository = "https://github.com/vic1707/xprs"
+include = [
+    "src/**/*",
+    "Cargo.toml",
+    "Cargo.lock",
+    "build.rs",
+    "README.md",
+    "LICENSE",
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
