--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ include = [
     "README.md",
     "LICENSE",
 ]
+categories = ["science", "mathematics", "parser-implementations"]
+keywords = ["parser", "math", "library"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
