--- a/.github/workflows/global_matrix.yml
+++ b/.github/workflows/global_matrix.yml
@@ -9,11 +9,11 @@ permissions:
   contents: read
 
 jobs:
-  pre_ci:
-    uses: dtolnay/.github/.github/workflows/pre_ci.yml@master
+  # pre_ci:
+  #   uses: dtolnay/.github/.github/workflows/pre_ci.yml@master
 
   setup_matrix:
-    needs: pre_ci
+    # needs: pre_ci
     strategy:
       fail-fast: false
       matrix:
