--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,36 +15,36 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo "rust-version: ${{ github.event.inputs.rust-version }}"
-          echo "enabled-feature-set: ${{ github.event.inputs.enabled-feature-set }}"
+          echo "rust-version: ${{ inputs.rust-version }}"
+          echo "enabled-feature-set: ${{ inputs.enabled-feature-set }}"
       - uses: actions/checkout@v4
       - name: Install Rust
         uses: IronCoreLabs/rust-toolchain@v1
         with:
-          toolchain: ${{ github.event.inputs.rust-version }}
-      - run: cargo check --no-default-features --features ${{ github.event.inputs.enabled-feature-set }}
+          toolchain: ${{ inputs.rust-version }}
+      - run: cargo check --no-default-features --features ${{ inputs.enabled-feature-set }}
 
   # tests:
   #   needs: build
-  #   runs-on: ${{ github.event.inputs.os }}
+  #   runs-on: ${{ inputs.os }}
   #   steps:
   #     - uses: actions/checkout@v4
   #     - name: Install Rust
   #       uses: IronCoreLabs/rust-toolchain@v1
   #       with:
-  #         toolchain: ${{ github.event.inputs.rust-version }}
-  #     - run: cargo test --no-default-features --features ${{ github.event.inputs.enabled-feature-set }}
+  #         toolchain: ${{ inputs.rust-version }}
+  #     - run: cargo test --no-default-features --features ${{ inputs.enabled-feature-set }}
 
   # miri:
   #   needs: build
-  #   runs-on: ${{ github.event.inputs.os }}
+  #   runs-on: ${{ inputs.os }}
   #   steps:
   #     - uses: actions/checkout@v4
   #     - name: Install Rust
   #       uses: IronCoreLabs/rust-toolchain@v1
   #       with:
-  #         toolchain: ${{ github.event.inputs.rust-version }}
+  #         toolchain: ${{ inputs.rust-version }}
   #     - run: cargo miri setup
-  #     - run: cargo miri test --no-default-features --features ${{ github.event.inputs.enabled-feature-set }}
+  #     - run: cargo miri test --no-default-features --features ${{ inputs.enabled-feature-set }}
   #       env:
   #         MIRIFLAGS: -Zmiri-strict-provenance
