--- a/.github/workflows/global_matrix.yml
+++ b/.github/workflows/global_matrix.yml
@@ -17,6 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         rust: [stable, beta, nightly, 1.70.0]
         enabled-feature-set: [
           "pemdas",
@@ -26,6 +27,7 @@ jobs:
         ]
     uses: ./.github/workflows/ci.yml
     with:
+      os: ${{ matrix.os }}
       rust-version: ${{ matrix.rust }}
       enabled-feature-set: ${{ matrix.enabled-feature-set }}
     secrets: inherit
