--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,16 +24,16 @@ jobs:
           toolchain: ${{ inputs.rust-version }}
       - run: cargo check --no-default-features --features "${{ inputs.enabled-feature-set }}"
 
-  # tests:
-  #   needs: build
-  #   runs-on: ${{ inputs.os }}
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Install Rust
-  #       uses: IronCoreLabs/rust-toolchain@v1
-  #       with:
-  #         toolchain: ${{ inputs.rust-version }}
-  #     - run: cargo test --no-default-features --features ${{ inputs.enabled-feature-set }}
+  tests:
+    needs: build
+    runs-on: ${{ inputs.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Rust
+        uses: IronCoreLabs/rust-toolchain@v1
+        with:
+          toolchain: ${{ inputs.rust-version }}
+      - run: cargo test --no-default-features --features ${{ inputs.enabled-feature-set }}
 
   # miri:
   #   needs: build
