--- a/.github/workflows/global_matrix.yml
+++ b/.github/workflows/global_matrix.yml
@@ -2,6 +2,7 @@ name: Setup Matrix
 
 on:
   push:
+    branches: [main]
   pull_request:
   workflow_dispatch:
 
@@ -19,12 +20,13 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         rust: [stable, beta, nightly, 1.70.0]
-        enabled-feature-set: [
-          "pemdas",
-          "pemdas compile-time-optimizations",
-          "pejmdas",
-          "pejmdas compile-time-optimizations",
-        ]
+        enabled-feature-set:
+          [
+            "pemdas",
+            "pemdas compile-time-optimizations",
+            "pejmdas",
+            "pejmdas compile-time-optimizations",
+          ]
     uses: ./.github/workflows/ci.yml
     with:
       os: ${{ matrix.os }}
