--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,16 +35,16 @@ jobs:
           toolchain: ${{ inputs.rust-version }}
       - run: cargo test --no-default-features --features ${{ inputs.enabled-feature-set }}
 
-  # miri:
-  #   needs: build
-  #   runs-on: ${{ inputs.os }}
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Install Rust
-  #       uses: IronCoreLabs/rust-toolchain@v1
-  #       with:
-  #         toolchain: ${{ inputs.rust-version }}
-  #     - run: cargo miri setup
-  #     - run: cargo miri test --no-default-features --features ${{ inputs.enabled-feature-set }}
-  #       env:
-  #         MIRIFLAGS: -Zmiri-strict-provenance
+  miri:
+    needs: build
+    runs-on: ${{ inputs.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Rust
+        uses: IronCoreLabs/rust-toolchain@v1
+        with:
+          toolchain: ${{ inputs.rust-version }}
+      - run: cargo miri setup
+      - run: cargo miri test --no-default-features --features ${{ inputs.enabled-feature-set }}
+        env:
+          MIRIFLAGS: -Zmiri-strict-provenance
