--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
   miri:
     needs: build
     runs-on: ${{ inputs.os }}
+    if: ${{ inputs.rust-version == 'nightly' }}
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
