--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
-        uses: dtolnay/rust-toolchain@miri
+        uses: IronCoreLabs/rust-toolchain@v1
+        with:
+          toolchain: ${{ inputs.rust-version }}
       - run: cargo miri setup
       - run: cargo miri test --no-default-features --features ${{ inputs.enabled-feature-set }}
         env:
