--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
         uses: IronCoreLabs/rust-toolchain@v1
         with:
           toolchain: ${{ inputs.rust-version }}
+          components: miri
       - run: cargo miri setup
       - run: cargo miri test --no-default-features --features ${{ inputs.enabled-feature-set }}
         env:
