--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,3 +50,14 @@ jobs:
       - run: cargo miri test --no-default-features --features ${{ inputs.enabled-feature-set }}
         env:
           MIRIFLAGS: -Zmiri-strict-provenance
+
+  clippy:
+    needs: build
+    # only on stable ubuntu
+    runs-on: ${{ inputs.os }}
+    if: ${{ inputs.rust-version == 'stable' && inputs.os == 'ubuntu-latest' }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Rust
+        uses: IronCoreLabs/rust-toolchain@v1
+      - run: cargo clippy --no-default-features --features ${{ inputs.enabled-feature-set }}
