enable fail-fast

--- a/.github/workflows/global_matrix.yml
+++ b/.github/workflows/global_matrix.yml
@@ -16,7 +16,7 @@ jobs:
   setup_matrix:
     # needs: pre_ci
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         rust: [stable, beta, nightly, 1.70.0]
