--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@nightly
+      - uses: IronCoreLabs/rust-toolchain@v1
+        with:
+          toolchain: nightly
       - uses: dtolnay/install@cargo-docs-rs
       - run: cargo docs-rs
 
